--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /source/PowerTrade/.vs/PowerTrade
 /source/PowerTrade/PowerTrade/bin/Debug/net8.0
 /source/PowerTrade/PowerTrade/obj
+/source/.vs/PowerTrade/FileContentIndex
+/source/PowerTrade/.vs/ProjectEvaluation
+/source/PowerTrade/bin/Debug/net8.0
+/source/PowerTrade/obj
