added datetime provide & update queue

--- a/source/PowerTrade.Business.Services/PowerTrade.Business.Services.csproj
+++ b/source/PowerTrade.Business.Services/PowerTrade.Business.Services.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Abstracts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PowerTrade.Services\PowerTrade.Services.csproj" />
+  </ItemGroup>
+
 </Project>
