--- a/source/PowerTrade/PowerTrade.csproj
+++ b/source/PowerTrade/PowerTrade.csproj
@@ -26,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PowerTrade.Business.Services\PowerTrade.Business.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
