feat - added csv generator, config validation

--- a/source/PowerTrade/PowerTrade.csproj
+++ b/source/PowerTrade/PowerTrade.csproj
@@ -30,6 +30,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="PowerService">
+      <HintPath>..\..\ExternalLib\PowerService\PowerService.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
