--- a/source/PowerTrade/appsettings.json
+++ b/source/PowerTrade/appsettings.json
@@ -7,6 +7,9 @@
         }
     },
     "IntraDayReportConfig": {
-        "SchedulerFrequencyInSec": 60
+        "SchedulerFrequencyInSec": 300,
+        "LocalTimezoneId": "Romance Standard Time",
+        "ReportPath": "D:\\",
+        "CsvDelimiter": ";"
     }
 }
