--- a/source/PowerTrade.Business.Services/PowerTrade.Business.Services.csproj
+++ b/source/PowerTrade.Business.Services/PowerTrade.Business.Services.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
+    <PackageReference Include="Polly" Version="8.5.2" />
   </ItemGroup>
 
   <ItemGroup>
