--- a/source/PowerTrade/appsettings.json
+++ b/source/PowerTrade/appsettings.json
@@ -1,10 +1,32 @@
 ﻿{
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
+            "Default": "Debug",
             "Microsoft": "Warning",
             "Microsoft.Hosting.Lifetime": "Warning"
         }
+    },
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft.AspNetCore.Mvc": "Warning",
+                "Microsoft.AspNetCore.Routing": "Warning",
+                "Microsoft.AspNetCore.Hosting": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "./logs/log-.txt",
+                    "rollingInterval": "Day"
+                }
+            },
+            {
+                "Name": "Console"                
+            }
+        ]
     },
     "IntraDayReportConfig": {
         "SchedulerFrequencyInSec": 300,
