--- a/source/PowerTrade.Business.Services.Unit.Tests/PowerTrade.Business.Services.Unit.Tests.csproj
+++ b/source/PowerTrade.Business.Services.Unit.Tests/PowerTrade.Business.Services.Unit.Tests.csproj
@@ -26,4 +26,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
