--- a/source/PowerTrade/appsettings.json
+++ b/source/PowerTrade/appsettings.json
@@ -1,14 +1,7 @@
-﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Warning"
-        }
-    },
+﻿{    
     "Serilog": {
         "MinimumLevel": {
-            "Default": "Debug",
+            "Default": "Information",
             "Override": {
                 "Microsoft.AspNetCore.Mvc": "Warning",
                 "Microsoft.AspNetCore.Routing": "Warning",
