refactor - spelling error

--- a/source/PowerTrade/appsettings.json
+++ b/source/PowerTrade/appsettings.json
@@ -23,7 +23,7 @@
     },
     "IntraDayReportConfig": {
         "SchedulerFrequencyInSec": 300,
-        "LocalTimezoneId": "Romance Standard Time",
+        "LocalTimeZoneId": "Romance Standard Time",
         "ReportPath": "D:\\",
         "CsvDelimiter": ";"
     }
